--- a/.env
+++ b/.env
@@ -30,5 +30,5 @@ APP_SECRET=a6e830671a276cb3ae881b10562b596d
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://devaion:aion@201.80.26.42:3306/infinityaion?serverVersion=5.6
-DATABASE_AION_URL=mysql://devaion:aion@201.80.26.42:3306/aion_teste?serverVersion=5.6
+DATABASE_AION_URL=mysql://devaion:aion@201.80.26.42:3306/40al_server_ls?serverVersion=5.6
 ###< doctrine/doctrine-bundle ###
