--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
 index:
    path: /
-   controller: App\SiteBundle\Controller\SiteController::index
+   controller: App\Controller\SiteController::index
