--- a/.env
+++ b/.env
@@ -42,3 +42,10 @@ DATABASE_AIONGS_URL=mysql://aionsys:1nf1A10nS3rVr@191.252.93.95:3306/al_server_g
 # DATABASE_AION_URL=mysql://devsms:s3cr3t05@127.0.0.1:3306/al_server_ls?serverVersion=5.6
 # DATABASE_AIONGS_URL=mysql://devsms:s3cr3t05@127.0.0.1:3306/al_server_gs?serverVersion=5.6
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
