--- a/.env
+++ b/.env
@@ -34,9 +34,13 @@ APP_SECRET=a6e830671a276cb3ae881b10562b596d
 # DATABASE_AION_URL=mysql://devaion:aion@201.80.26.42:3306/40al_server_ls?serverVersion=5.6
 # DATABASE_AIONGS_URL=mysql://devaion:aion@201.80.26.42:3306/40al_server_gs?serverVersion=5.6
 
-DATABASE_URL=mysql://aionsys:1nf1A10nS3rVr@191.252.93.95:3306/infinityaion?serverVersion=5.6
-DATABASE_AION_URL=mysql://aionsys:1nf1A10nS3rVr@191.252.93.95:3306/al_server_ls?serverVersion=5.6
-DATABASE_AIONGS_URL=mysql://aionsys:1nf1A10nS3rVr@191.252.93.95:3306/al_server_gs?serverVersion=5.6
+# DATABASE_URL=mysql://aionsys:1nf1A10nS3rVr@191.252.93.95:3306/infinityaion?serverVersion=5.6
+# DATABASE_AION_URL=mysql://aionsys:1nf1A10nS3rVr@191.252.93.95:3306/al_server_ls?serverVersion=5.6
+# DATABASE_AIONGS_URL=mysql://aionsys:1nf1A10nS3rVr@191.252.93.95:3306/al_server_gs?serverVersion=5.6
+
+DATABASE_URL=mysql://aionsys:1nf1A10nS3rVr@186.202.137.209:3306/infinityaion?serverVersion=5.6
+DATABASE_AION_URL=mysql://aionsys:1nf1A10nS3rVr@186.202.137.209:3306/al_server_ls?serverVersion=5.6
+DATABASE_AIONGS_URL=mysql://aionsys:1nf1A10nS3rVr@186.202.137.209:3306/al_server_gs?serverVersion=5.6
 
 # DATABASE_URL=mysql://devsms:s3cr3t05@127.0.0.1:3306/infinityaion?serverVersion=5.6
 # DATABASE_AION_URL=mysql://devsms:s3cr3t05@127.0.0.1:3306/al_server_ls?serverVersion=5.6
